--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "dependencies": {
     "@notionhq/client": "^2.2.10",
     "aws-sdk": "^2.1430.0",
+    "axios": "^1.4.0",
+    "csv": "^6.3.1",
+    "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^123.0.0",
+    "json2csv": "^6.0.0-alpha.2",
     "marked": "^6.0.0",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "youtube": "^0.1.0"
   }
 }
